--- a/src/css/desktop.css
+++ b/src/css/desktop.css
@@ -12,7 +12,7 @@
   }
 
   #map {
-    height: 500px;
+    height: 100%;
     border-right: 2px solid var(--accent-turquoise);
     border-bottom: none;
   }
