--- a/src/css/main.css
+++ b/src/css/main.css
@@ -146,6 +146,12 @@ main {
   scroll-margin-top: 80px;
 }
 
+.gallery-card.active {
+  outline: 2px solid #00f0b5;
+  background-color: rgba(0, 240, 181, 0.1);
+  scroll-margin-top: 80px;
+}
+
 footer {
   text-align: center;
   padding: 1rem;
